added Makefile in ./bin

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -6,44 +6,37 @@
 #    By: mde-rosa <mde-rosa@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/06/26 18:35:14 by assokenay         #+#    #+#              #
-#    Updated: 2021/07/13 18:45:56 by mde-rosa         ###   ########.fr        #
+#    Updated: 2021/07/13 18:42:49 by mde-rosa         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS = main.c echo.c init.c counters.c
+CC 			= 	gcc
+FLAGS 		=	-Wall -Wextra -Werror
 
-NAME = minishell
+FT_ECHO 		=	ft_echo
+SRC_FT_ECHO		=	ft_echo.c
+OBJCS_FT_ECHO 	= $(SRC_FT_ECHO:%.c=%.o)
 
-LIBS = ./libft/libft.a -lreadline
-
-OBJCS	=	$(SRCS:.c=.o)
-
-CC = gcc
-
-FLAGS = -Wall -Wextra -Werror
+FT_HELLO_WORLD			=	ft_hello_world
+SRC_FT_HELLO_WORLD		=	ft_hello_world.c
+OBJCS_FT_HELLO_WORLD 	= $(SRC_FT_HELLO_WORLD:%.c=%.o)
 
 %.o			:	%.c
 				@$(CC)  -c $<
 
-all			:	$(NAME)
-			
-$(NAME)		:	$(OBJCS)
-				@(make --no-print-directory -C libft/)
-				@(make --no-print-directory -C bin/)
-				@$(CC) $(FLAGS) -o $(NAME) $(OBJCS) $(LIBS)
-			 	@echo "\033[1;32m$@ successfully build\033[0m"
+all			:	$(FT_ECHO) $(FT_HELLO_WORLD)
+
+$(FT_ECHO)	: $(OBJCS_FT_ECHO)
+				@$(CC) $(FLAGS) $(SRC_FT_ECHO) -o $(FT_ECHO)
+
+$(FT_HELLO_WORLD)	: $(OBJCS_FT_HELLO_WORLD)
+				@$(CC) $(FLAGS) $(SRC_FT_HELLO_WORLD) -o $(FT_HELLO_WORLD)
 
 clean		:
-				@(make clean --no-print-directory -C ./libft/)
-				@(make clean --no-print-directory -C ./bin/)
-				@rm -f $(OBJCS)
-			 	@echo "\033[1;31m.o files deleted\033[0m"
+				@rm -f $(OBJCS_FT_ECHO) $(OBJCS_FT_HELLO_WORLD)
 
 fclean		:	clean
-				@(make fclean --no-print-directory -C ./libft/)
-				@(make fclean --no-print-directory -C ./bin/)
-				@rm -f $(NAME)
-			 	@echo "\033[1;31mbinaries deleted\033[0m"
+				@rm -f $(FT_ECHO) $(FT_HELLO_WORLD)
 
 re			:	fclean all
 
