--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,33 +1,36 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: assokenay <assokenay@student.42.fr>        +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/01/18 14:04:35 by mde-rosa          #+#    #+#              #
-#    Updated: 2021/06/26 18:45:04 by assokenay        ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+# -*- Makefile -*-
 
-FLAGS	=	-Wall -Wextra -Werror
-RM		=	rm -f
-NAME	=	libft.a
-INCLUDE = 	libft.h
-FILES	=	ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c \
-	ft_memchr.c ft_memcmp.c ft_strlen.c ft_strlcpy.c ft_strlcat.c \
-	ft_strchr.c ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c \
-	ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
-	ft_toupper.c ft_tolower.c ft_calloc.c ft_strdup.c ft_substr.c \
-	ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c \
-	ft_putchar_fd.c	ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_strcmp.c
-COMPILED	=	 $(FILES:.c=.o)
+NAME = libft.a
+
+SRCS =  ft_isalnum.c ft_isprint.c ft_memcmp.c ft_split.c ft_itoa.c \
+		ft_strlcat.c ft_strncmp.c ft_substr.c ft_atoi.c ft_isalpha.c \
+		ft_memcpy.c ft_strchr.c  ft_strlcpy.c ft_strjoin.c ft_strmapi.c \
+		ft_strnstr.c ft_tolower.c ft_bzero.c ft_isascii.c ft_memccpy.c \
+		ft_memmove.c ft_strdup.c ft_strlen.c ft_strrchr.c ft_putchar_fd.c \
+		ft_toupper.c ft_calloc.c ft_isdigit.c ft_memchr.c ft_memset.c \
+		ft_strtrim.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
+		ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
+		ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c \
+		ft_lstmap.c ft_strcmp.c
+
+OBJS = $(SRCS:.c=.o)
+
+FLAGS = -Wall -Wextra -Werror
+
+HDRS = libft.h
+
 all: $(NAME)
-$(NAME):
-	@gcc -c $(FLAGS) $(FILES)
-	@ar -rc $(NAME) $(COMPILED)
+
+$(NAME): $(SRCS)
+	@gcc $(FLAGS) -c $(SRCS)
+	@ar -rc $(NAME) $(OBJS)
+
 clean:
-	@$(RM) $(COMPILED)
+	@rm -f *.o
+
 fclean: clean
-	@$(RM) $(NAME)
+	@rm -f $(NAME)
+
 re: fclean all
+
+.PHONY: all clean fclean re
