sexpander gestisce meglio i backslash e i casi in cui la variabile non esiste, inizio pwd

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mde-rosa <mde-rosa@student.42.fr>          +#+  +:+       +#+         #
+#    By: mpezzull <mpezzull@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/06/26 18:35:14 by assokenay         #+#    #+#              #
-#    Updated: 2021/07/13 18:42:49 by mde-rosa         ###   ########.fr        #
+#    Updated: 2021/08/02 19:12:39 by mpezzull         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,12 +17,12 @@ FT_ECHO 		=	ft_echo
 SRC_FT_ECHO		=	ft_echo.c
 OBJCS_FT_ECHO 	= $(SRC_FT_ECHO:%.c=%.o)
 
-FT_HELLO_WORLD			=	ft_hello_world
-SRC_FT_HELLO_WORLD		=	ft_hello_world.c
+FT_HELLO_WORLD			=	our_pwd
+SRC_FT_HELLO_WORLD		=	our_pwd.c
 OBJCS_FT_HELLO_WORLD 	= $(SRC_FT_HELLO_WORLD:%.c=%.o)
 
 %.o			:	%.c
-				@$(CC)  -c $<
+				@$(CC) -c $<
 
 all			:	$(FT_ECHO) $(FT_HELLO_WORLD)
 
@@ -33,11 +33,11 @@ $(FT_HELLO_WORLD)	: $(OBJCS_FT_HELLO_WORLD)
 				@$(CC) $(FLAGS) $(SRC_FT_HELLO_WORLD) -o $(FT_HELLO_WORLD)
 
 clean		:
-				@rm -f $(OBJCS_FT_ECHO) $(OBJCS_FT_HELLO_WORLD)
+				@rm -f *.o
 
 fclean		:	clean
 				@rm -f $(FT_ECHO) $(FT_HELLO_WORLD)
 
 re			:	fclean all
 
-.PHONY		:	all clean fclean re
+.PHONY		:	clean fclean
