--- a/bin/Makefile
+++ b/bin/Makefile
@@ -6,12 +6,12 @@
 #    By: mde-rosa <mde-rosa@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/06/26 18:35:14 by assokenay         #+#    #+#              #
-#    Updated: 2021/08/03 18:24:17 by mde-rosa         ###   ########.fr        #
+#    Updated: 2021/08/03 19:36:47 by mde-rosa         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CC 				=	gcc
-CFLAGS 			=	-Wall -Wextra -Werror
+CFLAGS 			=	-Wall -Wextra -Werror -g
 
 OUR_ECHO 		=	our_echo
 SRC_OUR_ECHO	=	our_echo.c
