--- a/bin/Makefile
+++ b/bin/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: mde-rosa <mde-rosa@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/06/26 18:35:14 by assokenay         #+#    #+#              #
-#    Updated: 2021/08/10 12:58:19 by mde-rosa         ###   ########.fr        #
+#    Created: 2021/06/26 18:35:14 by mde-rosa          #+#    #+#              #
+#    Updated: 2021/11/20 23:52:56 by mde-rosa         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
